# source_code_example_C

./: GPIO_example.c  ImageCapture.c  README.md  api.c  api.h  meson.build  out000.raw  out001.raw  out002.raw  out003.raw  out004.raw  out005.raw  out006.raw  out007.raw  out008.raw  out009.raw  out010.raw  out011.raw  out012.raw  out013.raw  out014.raw  out015.raw  test  test.c
GPIO/: GPIO.c  meson.build
ImageCapture/: ImageCapture.c  meson.build
